# Controladores-ROS

./: README.md
move_home/: CMakeLists.txt  package.xml
move_home/src/: move_home.cpp  move_home_traj.cpp
my_controllers/p_controller/: CMakeLists.txt  controller_plugins.xml  package.xml
my_controllers/p_controller/src/: p_controller.cpp
my_controllers/pd_pid_controller/: CMakeLists.txt  controller_plugins.xml  package.xml
my_controllers/pd_pid_controller/src/: pd_pid_controller.cpp
my_controllers/pdg_controller/: CMakeLists.txt  controller_plugins.xml  package.xml
my_controllers/pdg_controller/src/: pdg_controller.cpp
my_controllers/pdgd_controller/: CMakeLists.txt  controller_plugins.xml  package.xml
my_controllers/pdgd_controller/src/: pdgd_controller.cpp
my_controllers/urdf/: m1n6s300.urdf
my_trajectory_controllers/def_pos_pkg/: CMakeLists.txt  package.xml  rostopic_list.txt
my_trajectory_controllers/def_pos_pkg/include/def_pos_pkg/: Trayectoria2.hpp
my_trajectory_controllers/def_pos_pkg/src/: Trayectoria2.cpp  def_pos.cpp
my_trajectory_controllers/pd_pid_traj_controller/: CMakeLists.txt  controller_plugins.xml  package.xml
my_trajectory_controllers/pd_pid_traj_controller/src/: pd_pid_traj_controller.cpp
my_trajectory_controllers/traj_msgs/: CMakeLists.txt  package.xml
